<resources>
    <string name="app_name">Snake</string>
    <string name="start">Start</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="vibration">Vibration:</string>
    <string name="size_of_snake">Size of snake:</string>
    <string name="speed_of_snake">Speed of snake:</string>
    <string name="gesture">Gesture:</string>
    <string name="swipe">Swipe</string>
    <string name="pointer">Pointer</string>
    <string name="last_game_end_screenshot">Last game end screenShot</string>
    <string name="best_score_0">Best score : 0</string>
</resources>
