<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.meisler.snake.SettingsActivity">

    <TextView
        style="@style/custom_TextViewStyle"
        android:textSize="20sp"
        android:text="@string/size_of_snake"/>
    <SeekBar
        android:id="@+id/sizeIndexSB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/speed_of_snake"/>
    <SeekBar
        android:id="@+id/speedSB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        style="@style/custom_TextViewStyle"
        android:textSize="20sp"
        android:text="@string/vibration"/>
    <CheckBox
        android:id="@+id/vibrationCB"
        android:layout_width="50dp"
        android:layout_height="50dp"/>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        style="@style/custom_TextViewStyle"
        android:textSize="20sp"
        android:text="@string/gesture"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/swipeRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/pointerRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pointer"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

</LinearLayout>
